prevent invisible radio buttons from escaping the radiostrip

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -268,6 +268,7 @@ section > pre.error-log {
     display: inline-flex;
     flex-direction: row;
     flex-wrap: wrap;
+    position: relative;
 }
 
 .radiostrip input[type=radio] {
